<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Daftar">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/cpc"/>
    <LinearLayout
        android:paddingTop="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="20pt"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_kamu"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi"
            android:inputType="textPassword"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/konfirmasi_kata_sandi"
            android:inputType="textPassword"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/daftarbutton"
            android:background="#2196F3"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/txt_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sudah_memiliki_akun_masuk"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>