<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:src="@drawable/crypto"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="24dp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/txt_fullname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="24dp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/txt_email2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        />
</LinearLayout>