<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:src="@drawable/crypto"/>

            <ImageView
                android:id="@+id/scrprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:padding="15dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="#2196F3"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saldo"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="120dp"
                            android:text="@string/rupiah_token"
                            android:textColor="#FFFFFF"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rp"
                            android:textSize="25dp"/>

                        <TextView
                            android:id="@+id/txt_saldo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/_0"
                            android:textColor="#FFFFFF"
                            android:textSize="25dp"
                            android:layout_marginLeft="8dp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginTop="100dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/btn_topUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/plus"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="325dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="#606060"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saldo"
                            android:textSize="28dp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="325dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="#BF267A"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saldo"
                            android:textSize="28dp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#ADD8E6"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/information"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="Pemberitahuan Tentang Aplikasi"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Saat ini aplikasi dibuat untuk memenuhi tugas rancang matakuliah Pengembangan Aplikasi Mobile (PAM)."
                    android:textSize="14dp"
                    android:layout_marginTop="50dp"
                    android:padding="15dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:src="@drawable/community"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/komunitas"
                    android:layout_marginLeft="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="43dp"
                    android:src="@drawable/community"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coming_soon"
                    android:layout_marginLeft="16dp"/>

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jual_beli_crypto"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="80dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#FFF5FF"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bitcoin"
                        android:padding="15dp"
                        android:textSize="20dp"
                        android:textColor="#000000"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>




        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="#0059FF"
                    app:cardCornerRadius="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajak_teman_kamu"
                        android:textSize="18dp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:padding="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dapatkan_uang_ratusan_ribu_rupiah_lumayan_bisa_menambah_uang_jajan_kuliah_kamu"
                        android:padding="15dp"
                        android:maxWidth="200dp"
                        android:layout_marginTop="20dp"
                        android:textColor="#FFFFFF"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gift"
                        android:padding="15dp"
                        android:layout_marginLeft="200dp"
                        android:layout_marginTop="25dp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="#F42222"
                    app:cardCornerRadius="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hati-Hati Penipuan yang Mengatasnamakan Crypto PAM"
                        android:maxWidth="188dp"
                        android:textSize="18dp"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:padding="15dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/warningg"
                        android:padding="15dp"
                        android:layout_marginLeft="200dp"
                        android:layout_marginTop="25dp"/>


                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>